# test-submodule-repo

./: CMakeLists.txt
src/: main.cpp
src/add/: CMakeLists.txt  add.h
src/tests/: CMakeLists.txt  tests.cpp
